# patterns

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md
cmake/: mpark_patterns-config.cmake.in
example/: balance.cpp
examples/: CMakeLists.txt  factorial.cpp  fibonacci.cpp  fizzbuzz.cpp
include/mpark/: match.hpp  patterns.hpp
include/mpark/patterns/: anyof.hpp  as.hpp  bind.hpp  config.hpp  fallthrough.hpp  let.hpp  lib.hpp  match.hpp  optional.hpp  regex.hpp  sum.hpp  vis.hpp  when.hpp  wildcard.hpp
include/mpark/patterns/detail/: as_tuple.hpp  forwarder.hpp  qualify_as.hpp
include/mpark/patterns/std/: mpark_variant.hpp  variant.hpp
support/: single-header.py  wandbox.cpp  wandbox.py
test/: CMakeLists.txt  README.md  aggregate.cpp  array.cpp  as.cpp  balance.cpp  calc.cpp  ds.cpp  identifier.cpp  intro.cpp  let.cpp  optional.cpp  placeholder.cpp  prod.cpp  regex.cpp  sum.cpp  variadic.cpp  when.cpp
v0.1.0/: patterns.hpp
v0.2.0/: patterns.hpp
v0.3.0/: patterns.hpp
